<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="30sp"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/orderDrinkTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drinks"
            android:textSize="30sp"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/orderDrinkPriceTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="30sp"
            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="Quantity: "
                />

            <EditText
                android:id="@+id/qtyOrderTxt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:inputType="number"
                android:hint="@string/quantity"
                />

        </LinearLayout>
        <Button
            android:id="@+id/buyDrinkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:text="@string/order" />
    </LinearLayout>

    <Button
        android:id="@+id/myOrderBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/my_order"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/orderMoreBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/order_more"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />



</LinearLayout>