<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/drinksBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/softdrinks"
                android:text="@string/drinks"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/foodsBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/grocery"
                android:text="@string/foods"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/snacksBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/snacks"
                android:text="@string/snacks"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/topUpBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/cash"
                android:text="@string/top_up"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/orderBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/my_order"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />


</RelativeLayout>