<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderCompleteActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_order_complete_thank_you"
            android:textAlignment="center"
            android:textSize="35sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/totalComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="30sp"
                android:textAlignment="center"
                />

            <ListView
                android:id="@+id/completeList"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <Button
                android:id="@+id/mainMenuBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/menu_utama"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </LinearLayout>

    </LinearLayout>




</ScrollView>